# service-order-auth-lambda

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
docs/adr/: 0001-k3s-over-eks.md  0002-postgresql-managed.md  0003-api-gateway-lambda-auth.md  0004-shared-jwt.md  0005-observability.md  0006-hpa.md
docs/architecture/: component-diagram.md  database-er.md  sequence-auth-and-open-service-order.md
docs/rfc/: 0001-four-repositories.md  0002-cpf-auth-flow.md  0003-environments.md  0004-observability-dashboards.md
docs/runbooks/: aws-academy-lambda-limitation.md  manual-lambda-validation.md
scripts/: deploy_existing_lambda.sh  invoke_lambda_test.sh  package_lambda.sh  validate_lambda_package.sh
src/: handler.py
src/application/: authenticate_customer_by_cpf.py
src/domain/: cpf.py
src/infrastructure/: jwt_issuer.py  postgres_customer_lookup.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_authenticate_customer_by_cpf.py
