[project]
name = "service-order-auth-lambda"
version = "1.0.0"
description = "Serverless CPF authentication for service-order APIs"
requires-python = ">=3.12,<4.0"
dependencies = [
  "psycopg[binary]>=3.1.13,<4.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4.3,<8.0.0",
  "black>=23.12.0,<24.0.0",
  "flake8>=6.1.0,<7.0.0",
  "isort>=5.13.2,<6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
